# osintbuddy

./: .dockerignore  .env  .env example  .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  auth.toml.example  backend.Dockerfile  deploy.sh  docker-compose.yml  pl.Dockerfile  vm_config.json
.casdoor/conf.example/: app.conf  init_data.json
.sqlx/: query-1d57a090d90728e927a7f24368afd110a354ff2b907c737a1c78466eaa217947.json  query-2141de12b7f14c655b102db6a288bb8c2bd538501cb2894f280b340b410c8e0c.json  query-49961131cd4c56bc259ba43bf321d4bdac3e0a75ef1e39930c916b2745a5e5c2.json  query-82feadd8402203d4a7ee1d87bce18d0ed53cc718211e1ab04fc1a005c3810c8d.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-aa27ac2bf3a0b01c0aa95d434f1c89b9a2a5e25ea873386f27d499961401c6fa.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
auth/: app.conf  init_data.json
backend/: .dockerignore  README.md  init_data.json  prestart.sh  requirements.txt  start-reload.sh
backend/alembic/: env.py
backend/alembic/versions/: d440a85248ea_initial_revision.py
backend/api/: deps.py  utils.py
backend/api/api_v1/: api.py
backend/app/: backend_pre_start.py  main.py  start.py
backend/conf/: app.conf
backend/core/: casdoor.py  config.py
backend/crud/: __init__.py  base.py  crud_entities.py  crud_graphs.py  crud_members.py
backend/db/: base.py  session.py
backend/models/: __init__.py  entities.py  graphs.py  member.py
backend/schemas/: __init__.py  entities.py  graphs.py  member.py
conf/: app.conf
crates/: README.md  deploy.sh
crates/api/: Cargo.toml  Dockerfile  api-dev.sh  dev.Dockerfile
crates/api/.sqlx/: query-079660ea3ce09bc4060949a005f0ae161ba28ee33fb3beff34a97c5968978ec3.json  query-101d6eed50d846da4cc6a661b12d33ffbd02598e4f7430ff8332686853763788.json  query-27be3ebee1c8fcf5640c9895c2af3bfec033ff740d7ba0f101abe77fe76d7daf.json  query-467fec1014aa48f6c67c9b0e684f8a73b9bdf3bed556a0393a70f41abf42be0b.json  query-824b286f84da55472eb3f6e2352312ad4b1fe79e530819fa629b4922676e81c0.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-997879d17ecea068d081866cd559372194afdf1d55f94380745d4de9f06e3eee.json  query-a1e4d6fa09fc656e044d912ab826bdcee216254d45f6671ce99cbed3cfc7ac87.json  query-b02fb933fc2ead219c60c4e9c90dfd4a217b6ea324393c552723cb20c04c58eb.json  query-b2364192c3ac9cb01670f1ba95241098bb460eb9809db36e94d3a6ab25bb72b0.json  query-b2d9ec76069a828a256a6af6552895e1602d07b326caa42e1d5e41ad3cf41844.json  query-c8828331367f0270a1ca39c5474b1e887fd1d9c8d81ffba8856d527b763c013a.json  query-d31a14449b598c4e824ea3b93db60da74af5a7ca3412df7b66778b2fae9a29a5.json  query-da827b8fdeb4f8f8c1fccb4031989aa1035c4efadf6368d65c2d19d3694aa821.json  query-ec48655dae13ef93b28867369db3629d50210462b9e59412c7d97271cf57df33.json  query-f8e4514e5857c6de5ea8d543f1d1ac3e441a4f74167bae7009cb15305cd66054.json  query-fde56f008196baf8ef9ae8847fb696234827a1a93e7d695f399c670da7e4af7b.json
crates/api/migrations/: 20250529170043_init.down.sql  20250529170043_init.up.sql
crates/api/src/: abac.rs  config.rs  db.rs  lib.rs  main.rs  projector.rs
crates/api/src/handlers/: attachments.rs  cases.rs  entities.rs  events.rs  graphing.rs  graphs.rs  jobs.rs  mod.rs  organization.rs  user.rs
crates/api/src/middleware/: auth.rs
crates/api/src/schemas/: attachments.rs  entities.rs  errors.rs  graphs.rs  mod.rs  organization.rs  user.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  db.rs  errors.rs  eventstore.rs  jobs.rs  lib.rs  utils.rs
crates/migrations/: 20250529170043_init.down.sql  20250529170043_init.up.sql  20250921090000_add_actor_id_to_events.down.sql  20250921090000_add_actor_id_to_events.up.sql  20250921100000_entity_attachments.down.sql  20250921100000_entity_attachments.up.sql
crates/worker/: Cargo.toml  Dockerfile  README.md
crates/worker/src/: main.rs  poller.rs  vm.rs
docs/: roadmap.md
frontend/: .env  .env.example  README.md  index.html  markdoc.d.ts  output.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.paths.json  vite.config.ts
frontend/public/: index.html
frontend/src/: AppRoutes.tsx  app.tsx  globals.d.ts  index.css  index.d.ts  index.tsx  main.tsx  markdoc.d.ts  vite-env.d.ts
frontend/src/app/: api.ts  atoms.ts  baseApi.ts  hooks.ts  middleware.ts  store.ts  tags.ts  utilities.ts
frontend/src/components/: ActivityGrid.tsx  AppLayoutSidebar.tsx  Button.tsx  Callout.tsx  Fence.tsx  Headers.tsx  Hero.tsx  Icons.tsx  Loaders.tsx  MeshGradient.tsx  Prose.tsx  PublicNavbar.tsx  QuickLinks.tsx  ScrambleText.tsx  ShinyText.tsx  Timeline.tsx  buttons.tsx  headers.tsx  icons.tsx  inputs.tsx  loaders.tsx
frontend/src/hooks/: useDraggableEdgeLabel.ts  useFuzzySearch.tsx
frontend/src/markdoc/: nodes.ts  tags.ts
frontend/src/routes/: AppLayout.tsx  AppRoutes.tsx  (+2 more)
migrations/: 20250529170043_init.up.sql
rs/: .env  Cargo.toml  README.md  docker-compose.yml
rs/.sqlx/: query-56de4cabc7bba1791335906be5679ca6059fb51d9bc1d739e6f4a02b21fc2031.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-c8ab9480c533943a57957849adffe820a1610fd8682680bfe75ecf2334d27230.json  query-f45899c7d80813d74489c7211eff011557214331a7776fe365e8f2f9e0cf4e70.json
rs/migrations/: 20250529170043_init.down.sql  20250529170043_init.up.sql
rs/src/: config.rs  db.rs  error.rs  jwt_auth.rs  lib.rs  main.rs  utils.rs
rs/src/core/: db.rs
rs/src/handlers/: entities.rs  graphs.rs  mod.rs  user.rs
rs/src/middleware/: auth.rs  jwt_auth.rs
rs/src/models/: user.rs
rs/src/schemas/: entities.rs  errors.rs  graphs.rs  mod.rs  user.rs
services/: README.md  rabbitmq.sh
services/api/: Cargo.toml  Dockerfile  README.md
services/worker/: Cargo.toml  Dockerfile  README.md
src/: config.rs  db.rs  lib.rs  main.rs
src/handlers/: entities.rs  graphing.rs  graphs.rs  mod.rs  user.rs
src/middleware/: auth.rs
src/schemas/: entities.rs  errors.rs  graphs.rs  mod.rs  organization.rs  user.rs
(+165 files in other folders)
