[workspace]
resolver = "2"
members = [
    "crates/worker",
    "crates/api",
    "crates/common"    
]

[workspace.dependencies]
actix-web = "4"
actix-multipart = "0.6.1"
confik = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "derive", "chrono", "uuid"] }
dotenvy = "0.15.7"
sqids = "0.4.2"
actix-cors = "0.7.1"
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
chrono = {version ="0.4.41", features = ["serde"]}
argon2 = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rand_core = { version = "0.9.3", features = ["std"] }
moka = { version = "0.12.10", features = ["sync"] }
actix-ws = "0.3.0"
actix-files = "0.6.6"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3.31"
tokio = { version = "1.43", features = [
    "net",
    "time",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
    "full"
] }
actix-limitation = "0.5.1"
firecracker-rs-sdk = { version = "0.1.0", features = ["_rt-tokio"] }
lettre = "0.11"