[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }
actix-ws = { workspace = true }
actix-limitation = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
confik = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
moka = { workspace = true }
rand_core = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqids = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
common = { path = "../common" }
casdoor-rust-sdk = "1.3.0"
