[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
regex = { workspace = true, optional = true }