[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
regex = { workspace = true }
actix-web = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
confik = { workspace = true }
